<resources>
    <string name="app_name">Engineers-thesis-client</string>
    <string name="army_arranger_nalepka_marek">Army Arranger - Nalepka Marek</string>
    <string name="army_arranger">Army Arranger</string>
    <string name="about_aplication">About Aplication</string>
    <string name="create_army_list">Create Army List</string>
    <string name="exit">Exit</string>
    <string name="cost">Cost</string>
    <string name="composition">Composition</string>
    <string name="weapons">Weapons</string>
    <string name="options">Options</string>
    <string name="special_rules">Special Rules</string>
    <string name="additional_models">Additional models</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="save_selector">save selector</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="saved_selectors">Saved Selectors</string>
</resources>
