<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/unitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/unitDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/unitDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#242424"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unitName">

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/cost"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_height="match_parent"/>

                <RadioGroup
                    android:id="@+id/unit_base_cost_value"
                    android:gravity="left"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/composition"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/composition_value"
                    android:gravity="left"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/weapons"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/weapons_value"
                    android:gravity="left"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_height="match_parent"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:layout_height="match_parent"
                    android:text="@string/additional_models"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>

                <LinearLayout
                    android:id="@+id/additional_models"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:layout_height="match_parent"
                    android:text="@string/options"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>

                <LinearLayout
                    android:id="@+id/options_value"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/special_rules"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/special_rules_value"
                    android:gravity="left"
                    android:padding="3dip"
                    android:background="#ffffff"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>